docs: update README with detailed setup guide and VS Code instructions